# nwf-scholarship-calculator

./: .gitignore  CLAUDE.md  README.md  app.py  build_test_data.py  config.py  launch.bat  launch.command  pyproject.toml
engine/: eligibility.py  exporter.py  loader.py  postprocess.py  solver.py
sample_data/: recipients_sample.csv  scholarships_sample.csv
tasks/: todo.md
tests/: test_eligibility.py  test_loader.py  test_solver.py
